tests/golden/error/visibility_sibling/sibling_a.tg
// Sibling A has a private type.

type SecretType = Nat

pub fn public_fn() -> Nat { 0 }
